--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@mui/x-date-pickers": "^8.8.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "lodash": "^4.17.21",
     "qrcode-terminal": "^0.12.0",
