--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "lodash": "^4.17.21",
+    "node-interval-tree": "^2.1.2",
     "qrcode-terminal": "^0.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
