--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "test:ai": "vitest run"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -32,6 +33,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/lodash": "^4.17.15",
     "@types/node": "^24.0.14",
     "@types/react": "^19.0.8",
@@ -41,6 +45,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "jsdom": "^26.1.0",
     "nodemon": "^3.1.9",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
