--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest run",
     "test:ai": "vitest run"
   },
   "dependencies": {
