--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite --host",
-    "server": "nodemon server.js",
+    "server": "nodemon server/index.js",
     "publish": "vite build && gh-pages -d dist",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -21,10 +21,12 @@
     "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^8.8.0",
     "@types/react-window": "^1.8.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "node-interval-tree": "^2.1.2",
     "qrcode-terminal": "^0.12.0",
